2000-09-04	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* clock/Makefile.am, console/Makefile.am, network/Makefile.am,
	start/Makefile.am, startup/Makefile.am, timer/Makefile.am,
	wrapup/Makefile.am: Include compile.am

2000-08-10	Joel Sherrill <joel@OARcorp.com>

	* ChangeLog: New file.