@@ -21,10 +21,6 @@ include $(top_srcdir)/../../../../../../automake/lib.am
 # (OPTIONAL) Add local stuff here using +=
 #
 
-if RTEMS_GAS_CODE16
-AM_CPPFLAGS += -DNEW_GAS
-endif
-
 $(PROJECT_RELEASE)/lib/start$(LIB_VARIANT).o: $(ARCH)/start.o
 	$(INSTALL_DATA) $< $@
 
